draft notes for mar 09

--- a/lec_01_26.md
+++ b/lec_01_26.md
@@ -264,7 +264,7 @@ If the ground is wet, then it's raining.
     p^(qvr) <-> (p^q)v(p^r)
     pv(q^r) <-> (pvq)^(pvr)
 * (5) DeMorgan's Laws
-    ~(p^q) <-> (~q)v(~q)
+    ~(p^q) <-> (~p)v(~q)
     ~(pvq) <-> (~p)^(~q)
 * (6) Implications
 
@@ -272,6 +272,6 @@ If the ground is wet, then it's raining.
 ## Homework #4
 ```
 From the appendix,
-p582 #1-31(odd), #33-36
-p586 #1-12(odd)
+p582 A.1 #1-31(odd), #33-36
+p586 A.2 #1-12(odd)
 ```
