--- a/lec_01_31.md
+++ b/lec_01_31.md
@@ -295,8 +295,8 @@ k = 1/2
 => 3/2 and 1/2 are integers (contradiction) 
 
 
-## Homework
+## Homework #6
 
-p587 #30,31,32,34
+p587 A.2 #30,31,32,34
 
-p592 #1,2,3,5,10,11,13,15,17,18,19,21-25
+p592 A.3 #1,2,3,5,10,11,13,15,17,18,19,21-25
