--- a/lec_02_02.md
+++ b/lec_02_02.md
@@ -248,9 +248,9 @@ there 1 = P_k * N - P_1 * P_2 * ... * P_k * P_n
 Contradiction!
 
 
-### Homework
+### Homework #6
 
-p.593 #26, 27
+p.593 A.3 #26, 27
 
 1. Use a direct proof to prove:
 
