--- a/lec_02_09.md
+++ b/lec_02_09.md
@@ -231,7 +231,7 @@ in at least the nth decimal place
 > this is `Cantor's Theorem`
 
 
-## Homework Problems
+## Homework Problems #8
 something to think about, see if we can prove a few things
 
 1. Prove that the union of two countably inifinite sets is countably infinite
