--- a/lec_02_07.md
+++ b/lec_02_07.md
@@ -269,6 +269,6 @@ If we indicate the number of elements of sets s by |s|,
 then | A_1 x A_2 x ... x A_n | = |A_1| * |A_2| * ... * |A_n|
 
 
-## Homework Problems
+## Homework Problems #7
 
 * Ch2 p46 #1-7(odd), 9-13, 15-27(odd), 28, 32, 33-39(all)
