--- a/lec_02_14.md
+++ b/lec_02_14.md
@@ -332,7 +332,7 @@ Let two words be "equivalent" if they begin with the same letter.
 
 The set of all words that start with Q
 
-## Homework
+## Homework #9
 Moving into section 2.2, for equivalent classes
 
 p52, #2,3,5,6,8,10-12,13,15,18,19,21,23-27,29,31
