--- a/lec_02_16.md
+++ b/lec_02_16.md
@@ -275,7 +275,7 @@ so x1-y2 = z1-z2
 (1,3), (2,4), (3,5)...
 ```
 
-### Homework Prob., #26
+### Homework Prob. Review, #26
 
 "circular": xRy and yRz => zRx
 
